2005-08-20 Borut Razem <borut.razem AT siol.net>

	* configure, configure.in: added tests for libsocket and libnsl libraries,
	  requred by sdcdb on sparc-solaris
	* device/lib/pic16/Makefile.common.in: force make to use bash shell
	* sim/ucsim/libtool: regenerated on sparc-solaris
	* sim/ucsim/avr.src/Makefile.in, sim/ucsim/hc08.src/Makefile.in,
	  sim/ucsim/s51.src/Makefile.in, sim/ucsim/xa.src/Makefile.in,
	  sim/ucsim/z80.src/Makefile.in: removed GNU ld specific linker options 
	  -Wl,--start-group and -Wl,--end-group to enable ucsim compilation on
	  sparc-solaris, which doesn't use GNU ld linker
	* device/lib/Makefile.in: cp on sparc-solaris (SunOS) does not support -u option
	* as/Makefile: find on sparc-solaris does not support -maxdepth option

2005-08-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def: updated comments

2005-08-16 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c: slightly shorter
	* doc/sdccman.lyx: incremented version
	* src/mcs51/peeph.def: moved peephole comments to the line of first
	  change to better keep line correlation, reanimated 186.e
	* src/mcs51/peeph.def: renamed similar peepholes by using suffixes

2005-08-16 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/pcode.c : Pasted ".line" assembly directives patch from
	  David Saxton with quotes around file name.

2005-08-15 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bitfields.c, support/regression/tests/bitvars.c,
	  support/regression/tests/bitwise.c, support/regression/tests/literalop.c,
	  support/regression/tests/rotate.c, support/regression/tests/zeropad.c:
	  make tests run on x86_64 platform

2005-08-13 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/Makefile.subdir: weakened clean-intermediate rule
	  as it might be executed DURING a build (parallel make is wonderful)

2005-08-13 Raphael Neider <rneider AT web.de>
